Fixed header alignment and upgraded to WP 4.6.1

--- a/wp-content/themes/apostrophe/style.css
+++ b/wp-content/themes/apostrophe/style.css
@@ -2650,6 +2650,7 @@ Primarily mobile devices and super-small tablets.
 		/*text-align: center;*/
 		text-align: left;
    		width: 100%;
+		height: 85px;
 	}
 
 	.site-logo {
